@startuml
skinparam classAttributeIconSize 0

' ======= 产品族 (敌机) =======
abstract class AbstractAircraft {
    + {abstract} shoot(): List<BaseBullet>
}

class MobEnemy {
    + shoot(): List<BaseBullet>
}
class EliteEnemy {
    + shoot(): List<BaseBullet>
}
class VanguardEnemy {
    + shoot(): List<BaseBullet>
}
class AceEnemy {
    + shoot(): List<BaseBullet>
}

' 继承关系 (产品)
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- VanguardEnemy
AbstractAircraft <|-- AceEnemy

' ======= 工厂族 (敌机工厂) =======
interface EnemyFactory {
    + createEnemy(): AbstractAircraft
}

class MobEnemyFactory {
    + createEnemy(): AbstractAircraft
}
class EliteEnemyFactory {
    + createEnemy(): AbstractAircraft
}
class VanguardEnemyFactory {
    + createEnemy(): AbstractAircraft
}
class AceEnemyFactory {
    + createEnemy(): AbstractAircraft
}

' 实现关系 (工厂)
EnemyFactory <|.. MobEnemyFactory
EnemyFactory <|.. EliteEnemyFactory
EnemyFactory <|.. VanguardEnemyFactory
EnemyFactory <|.. AceEnemyFactory

' 依赖关系 (工厂创建对应的具体产品)
MobEnemyFactory ..> MobEnemy : creates >
EliteEnemyFactory ..> EliteEnemy : creates >
VanguardEnemyFactory ..> VanguardEnemy : creates >
AceEnemyFactory ..> AceEnemy : creates >

note top of EnemyFactory : 工厂接口，定义了创建敌机的规范。\n具体创建哪种敌机由它的子类工厂决定。

@enduml
